refactor: cleanup graphql core engine and resolvers